--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 # Core dependencies goes here
 aws_textract>=0.1.1,<1.0.0
-pynamodb==5.5.1
+pynamodb>=5.5.1,<6.0.0
 pynamodb_mate==5.3.4.9
 boto_session_manager>=1.7.2,<2.0.0
 s3pathlib>=2.1.2,<3.0.0
