--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 # Core dependencies goes here
+botocore>=1.34.0,<1.35.0
+boto3>=1.34.0,<1.35.0
 aws_textract>=0.2.1,<1.0.0
-pynamodb>=5.5.1,<6.0.0
-pynamodb_mate==5.3.4.9
+pynamodb>=6.0.0,<7.0.0
+pynamodb_mate>=6.0.0.1,<6.0.1.0
 boto_session_manager>=1.7.2,<2.0.0
 s3pathlib>=2.1.2,<3.0.0
 PyMuPDF>=1.23.26,<2.0.0
